Added bullets.Made the invaders move from Left to Right Downwards and made the bullets fly upwards

--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -91,5 +91,8 @@
   <ItemGroup>
     <None Include="Resources\xS5AFPQ.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bullet1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
